// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`balanceBuilder assets account should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ASSET>",
    "<ACCOUNT>",
  ],
  "func": "account",
  "pallet": "assets",
  "transform": [Function],
}
`;

exports[`balanceBuilder ormlTokens accounts should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
    {
      "ForeignAsset": "<ASSET>",
    },
  ],
  "func": "accounts",
  "pallet": "ormlTokens",
  "transform": [Function],
}
`;

exports[`balanceBuilder system account should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
  ],
  "func": "account",
  "pallet": "system",
  "transform": [Function],
}
`;

exports[`balanceBuilder system accountEquilibrium should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
  ],
  "func": "account",
  "pallet": "system",
  "transform": [Function],
}
`;

exports[`balanceBuilder tokens accounts should be correct foreignAsset config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
    {
      "ForeignAsset": "<ASSET>",
    },
  ],
  "func": "accounts",
  "pallet": "tokens",
  "transform": [Function],
}
`;

exports[`balanceBuilder tokens accounts should be correct fungibleToken config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
    {
      "FungibleToken": "<ASSET>",
    },
  ],
  "func": "accounts",
  "pallet": "tokens",
  "transform": [Function],
}
`;

exports[`balanceBuilder tokens accounts should be correct miningResource config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
    {
      "MiningResource": "<ASSET>",
    },
  ],
  "func": "accounts",
  "pallet": "tokens",
  "transform": [Function],
}
`;

exports[`balanceBuilder tokens accounts should be correct token config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
    {
      "Token": "<ASSET>",
    },
  ],
  "func": "accounts",
  "pallet": "tokens",
  "transform": [Function],
}
`;

exports[`balanceBuilder tokens accounts should be correct token2 config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
    {
      "Token2": "<ASSET>",
    },
  ],
  "func": "accounts",
  "pallet": "tokens",
  "transform": [Function],
}
`;
